src/angular-app/bellows/cssBootstrap4/palaso-ui.scss
/* Typeahead */
.typeahead {
    z-index: 51;
    margin-top: 0px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    display: inline-block;
}

div.typeahead .typeahead-results {
    z-index: 10;
    width: 100%;
}

div.typeahead ul {
  padding: 0;
  overflow-y: auto;
  overflow-x: hidden;
  max-height: 300px;
  width: 100%;
  background-color: #fff;
  border-radius: 4px;
  border: 1px solid grey;

  li {
    padding: 0.25rem;

    &:hover {
      background-color: #ffc;
    }
  }
}

li.typeahead-item p.name {
    font-size: 1.0em;
}

li.typeahead-item p.email {
    font-size: 0.8em;
    color: #666666;
}
.typeahead + span {
    vertical-align: top;
}

/* listview */
div.listview {
    margin-top: 8px;
}

div.listview div.paginationblock div {
    display: inline-block;
}

.listview .active {
    background-color: #ffc;
}

div.listview div.pagination select {
    width: 70px;
}

/* Listview for projects, questions, answers views */
.listview .attention-block {
    text-align: center;
    background-color: #d3d3d3; /* lightgray */
    color: #dc143c; /* crimson */
    padding: 10px;

    a {
      color: #dc143c;
    }
}

div.listview div.attention-block .count {
    font-size: 1.8em;
}

div.listview div.attention-block .subtitle {
    font-size: 1.0em;
}

.larger-text {
    font-size: 1.25em;
}

/* Control bar for use at top of listview */
form.control-bar {
    margin-bottom: 0px;
}

/* use for user signup password strength meter */
input.ng-pristine + ul#strength {
    display:none;
}
ul#strength {
    display:inline;
    list-style:none;
    margin:0;
    margin-left:15px;
    padding:0;
    vertical-align:6px;
}
.point:last {
    margin:0 !important;
}
.point {
    background:#DDD;
    border-radius:2px;
    display:inline-block;
    height:5px;
    margin-right:1px;
    width:10px;
}



/* Highlighted text in text selection directive */
.highlighted {
    background-color: yellow;
}

/* Styles for the two tagging directives (view-tags and add-tags) */
.tag-list ul li {
    position: relative;
    color: #3E6D8E;
    background-color: #E0EAF1;
    border-bottom: 1px solid #b3cee1;
    border-right: 1px solid #b3cee1;
    padding: 3px 4px 3px 4px;
    margin: 2px 2px 2px 5px;
    text-decoration: none;
    font-size: 90%;
    line-height: 1.4;
    white-space: nowrap;
    display: inline-block;
}

.tag-list ul li img.closeicon {
    position: absolute;
    top: -10px;
    right: -10px;
    color: red;
    z-index: 1;
    cursor: pointer;
}

/* TODO: Convert to sass? */
.entryItemView i.fa-times:hover {
    color:red;
}

form.new-tags i.fa-plus {
    color: green;
}

.addItem {
    text-align:right;
    font-size:12px;
    margin-right:20px;
    cursor: pointer;
}

/* Style for file upload */
.drop-box {
    border: 4px dashed #e67345;
    background-color: white;
    text-align: center;
    padding-top: 30px;
    padding-bottom: 30px;
}



/* style for notice messages */
div.notices {
    position: fixed;
    top: 7px;
    left: 0;
    right: 0;
    z-index: 11000;
    min-width: 300px;
    max-width: 450px;
    width: auto;
    margin: auto;
}

/* overrides definitions in sf.css and bootstrap.css */
div.notices .animate-repeat {
    line-height: inherit;
}

/* Select language directive */
pui-select-language div.scroll-table {
    max-height: 330px;
    overflow-y: auto;
    margin-bottom: 20px;
}

pui-select-language div.scroll-table table {
    margin-bottom: 0px;
}

